<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.MainActivity"
    android:orientation="vertical"
    android:weightSum="100"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical"
        android:background="#253383"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75"
        android:background="@drawable/fotohotelinicio"
        android:orientation="vertical"
        android:weightSum="100">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="90dp"
            android:layout_weight="10"
            android:text="@string/login_usuario"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edtLoginUsuario"
            android:layout_width="338dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:layout_weight="10"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_hint_usuario"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/login_pass"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/edtLoginPass"
            android:layout_width="338dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="5sp"
            android:layout_weight="10"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/login_hint_pass"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:background="#253383">

            <Button
                android:id="@+id/bttLoginRegistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="8"
                android:onClick="loginRegistrar"
                android:text="@string/login_boton_registrarse"
                android:textSize="10sp"/>

            <Button
                android:id="@+id/bttLoginEntrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="8"
                android:onClick="loginEntrar"
                android:textSize="10sp"
                android:text="@string/login_boton_entrar" />
            </LinearLayout>

</LinearLayout>






