<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ParentListarCiudad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListarCiudad.ListarCiudadVista"
    android:background="#253383"
    android:weightSum="100"
    android:orientation="vertical">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/fragCiudad"
        android:name="com.svalero.clara.bookingexamen.Fragments.MenuDosFragment">

    </fragment>

    <LinearLayout
        android:id="@+id/layout_ciudad_botones1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:weightSum="2"
        android:padding="@dimen/padding"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/bttPuntuacion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5sp"
            android:backgroundTint="@color/accent"
            android:layout_weight="1"
            app:cornerRadius="20dp"
            android:onClick="puntuacion"
            android:text="@string/ciudad_filtrar_puntuacion"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="10sp"
            android:clickable="true"/>

        <Button
            android:id="@+id/bttReservados"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/accent"
            android:onClick="masReservados"
            android:text="@string/ciudad_filtrar_reservados"
            android:textAlignment="center"
            app:cornerRadius="20dp"
            android:textColor="@color/text"
            android:layout_marginLeft="5sp"
            android:textSize="10sp"
            android:clickable="true"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_ciudad_botones2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:weightSum="2"
        android:padding="@dimen/padding"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bttPrecioAsc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/accent"
            android:onClick="precioAsc"
            android:text="@string/ciudad_filtrar_precio_asc"
            android:textAlignment="center"
            app:cornerRadius="20dp"
            android:textColor="@color/text"
            android:textSize="10sp"
            android:layout_marginRight="5sp"
            android:clickable="true">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bttPrecioDes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5sp"
            android:textAlignment="center"
            android:backgroundTint="@color/accent"
            app:cornerRadius="20dp"
            android:text="@string/ciudad_filtrar_precio_des"
            android:textColor="@color/text"
            android:onClick="precioDes"
            android:textSize="10sp"
            android:clickable="true"
            >
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_ciudad_contenedor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="75"
        android:layout_marginTop="@dimen/padding">

    </RelativeLayout>


    <!-- Progress Bar -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_listar_ciudad_progressBar"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/frag_listar_ciudad_progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <!-- Pantalla de Error -->

    <RelativeLayout
        android:id="@+id/layoutErrorCiudad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/txt_listar_ciudad_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_error"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/bttReintentarCiudad"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_listar_todo_error"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:onClick="botonReintentarciudad"
            android:text="@string/todo_boton_reintentar" />

    </RelativeLayout>

</LinearLayout>