<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardBackgroundColor="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="6"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:id="@+id/txtHabRowNumPersonas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ficha_recycler_npersonas"
                android:textAlignment="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/txtHabRowCamasIndi"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ficha_recycler_camas_ind"
                android:textAlignment="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/txtHabRowCamasMatri"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ficha_recycler_camas_matr"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">
            <TextView
                android:id="@+id/txtHabRowNumPersonas1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/txtHabRowCamasIndi1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/txtHabRowCamasMatri1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="5">
            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/ficha_hab_precio"
                android:textSize="10sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtHabRowPrecio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/txtIdHabitacion"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>